# Groot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bt.py  cylinder_castanheiros.toml  cylinder_palos.toml  cylinder_params.lua  cylinder_params.toml  cylinder_synthetic.toml  cylinders.ggf  cylinders.lua  gfx  imgui.ini  lua_api.lua  palos.ggf  synthetic.ggf  test_file.py  testbed.py  wololo.ggf
app/: CMakeLists.txt  app_log.cpp  app_log.hpp  application.cpp  application.hpp  cloud_io.cpp  cloud_io.hpp  cloud_io_system.cpp  cloud_io_system.hpp  cloud_system.cpp  cloud_system.hpp  command.hpp  command_gui.cpp  command_gui.hpp  components.cpp  components.hpp  create_graph.cpp  create_graph.hpp  cylinder_connect.cpp  cylinder_connect.hpp  cylinder_marching.cpp  cylinder_marching.hpp  cylinder_viewer_system.cpp  cylinder_viewer_system.hpp  data_output.hpp  data_source.hpp  editor.cpp  editor.hpp  editor_display_imgui.hpp  editor_imgui.hpp  entity_editor.hpp  entt.hpp  graph_cluster.cpp  graph_cluster.hpp  graph_io.cpp  graph_io.hpp  graph_resample.cpp  graph_resample.hpp  graph_view.cpp  graph_view.hpp  (+43 more)
app/cluster_graph/: CMakeLists.txt  main.cpp
app/create_graph/: CMakeLists.txt  main.cpp
app/view_graph/: CMakeLists.txt  create_graph.cpp  create_graph.hpp  graph_view.cpp  graph_view.hpp  imfilebrowser.h  main.cpp  operation.hpp
docs/: .gitignore  components.rst  conf.py  index.rst  pygroot.rst
groot_app/: CMakeLists.txt  main.cpp  main_test.cpp
groot_app/include/groot_app/: app_log.hpp  application.hpp  cloud_io.hpp  cloud_system.hpp  command.hpp  command_gui.hpp  components.hpp  create_graph.hpp  cylinder_connect.hpp  cylinder_marching.hpp  entity_editor.hpp  entt.hpp  graph_cluster.hpp  graph_io.hpp  graph_repair.hpp  graph_resample.hpp  graph_viewer_system.hpp  groot_app.hpp  livny_et_al.hpp  open_workspace.hpp  render.hpp  resources.hpp  save_workspace.hpp  screenshot.hpp  serde.hpp  task.hpp  viewer_system.hpp  workspace_io.hpp
groot_app/src/: app_log.cpp  application.cpp  cloud_io.cpp  cloud_system.cpp  command_gui.cpp  components.cpp  create_graph.cpp  cylinder_connect.cpp  cylinder_marching.cpp  entity_editor.cpp  graph_cluster.cpp  graph_io.cpp  graph_repair.cpp  graph_resample.cpp  graph_viewer_system.cpp  livny_et_al.cpp  lodepng.cpp  open_workspace.cpp  render.cpp  save_workspace.cpp  screenshot.cpp  task.cpp  viewer_system.cpp  workspace_io.cpp
groot_graph/: CMakeLists.txt  tests.cpp
groot_graph/include/groot_graph/: cgal_helper.hpp  cluster.hpp  connectivity_repair.hpp  cylinder_connection.hpp  cylinder_marching.hpp  groot_graph.hpp  line_graph.hpp  livny_et_al.hpp  mesh_generator.hpp  particles.hpp  plant_graph.hpp  plant_graph_compare.hpp  plant_graph_io.hpp  plant_graph_serialize.hpp
groot_graph/src/: cluster.cpp  connectivity_repair.cpp  cylinder_connection.cpp  cylinder_marching.cpp  line_graph.cpp  livny_et_al.cpp  mesh_generator.cpp  particles.cpp  plant_graph.cpp  plant_graph_compare.cpp  plant_graph_io.cpp  plant_graph_serialize.cpp
groot_python/: CMakeLists.txt  entity.cpp  entity.hpp  python.cpp  python.hpp  python_graph.cpp  python_graph.hpp  python_imgui.cpp  python_imgui.hpp  python_task.cpp  python_task.hpp  registry.cpp  registry.hpp
groot_python/interpreter/: interpreter.cpp
groot_python/tests/: entity.cpp
include/groot/: aabb.hpp  assert.hpp  cgal.hpp  cgal_helper.hpp  cloud.hpp  cloud_load.hpp  cluster.hpp  cpptoml.hpp  cylinder_connection.hpp  cylinder_marching.hpp  disjoint_sets.hpp  glm_cgal.hpp  grid.hpp  groot.hpp  mesh.hpp  particles.hpp  plant_graph.hpp  plant_graph_compare.hpp  plant_graph_io.hpp  plant_graph_serialize.hpp  reconstruction.hpp  skeleton.hpp  skeleton.hpp_NO  tinyply.h  util.hpp
scripts/: cluster.py  cylinders.py  cylinders_splitted.py  evaluate.py  graphic.py  reconstruct_all.py  repair_graphs.py  skeletonize.py  split_huge_cloud.py  viewer.py
src/: cloud.cpp  cloud_load.cpp  cylinder_connection.cpp  cylinder_marching.cpp  particles.cpp  plant_graph.cpp  plant_graph_compare.cpp  plant_graph_io.cpp  plant_graph_serialize.cpp  skeleton.cpp  skeleton.cpp_NO  skeleton_mst.cpp_NO  tinyply.cpp
util/cxxopts/: cxxopts.hpp
